fixed some overflow on mobile screens

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -9,6 +9,11 @@ html {
     box-sizing: inherit;
 }
 
+.wrapper {
+    overflow-x: hidden;
+    position: fixed;
+}
+
 body {
     padding: 0;
     margin: 0;
